# LiftingLogger

./: CMakeLists.txt  lifts.txt
src/: helperfunctions.cpp  helperfunctions.h  main.cpp  main.h
